# minato

./: .bazelignore  .bazelrc  .envrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  aspect.bzl  default.nix  flake.nix  rcc.bzl  renovate.json  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/: CODE_OF_CONDUCT.md
.github/workflows/: CI.yaml
example/: BUILD.bazel  MODULE.bazel
nix/: devshell.nix
src/: bazel.rs  bep.rs  compdb.rs  lib.rs
tools/: wrapper
