# 🐻‍❄️〽️ minato: Fast, simple way to extract Bazel targets into a JSON Compilation Database
# Copyright (c) 2026 Noel <cutie@floofy.dev>, et al.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

exports_files(
    [
        "rustfmt.toml",
        "tools/wrapper",
        "aspect.bzl",
    ],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "library",
    srcs = glob(["src/*.rs"]),
    crate_name = "minato",
    crate_root = "src/lib.rs",
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "@minato_pkgs//:eyre",
        "@minato_pkgs//:facet",
        "@minato_pkgs//:facet-json",
        "@minato_pkgs//:is_executable",
        "@minato_pkgs//:tempfile",
        "@minato_pkgs//:tokio",
        "@minato_pkgs//:tracing",
        "@minato_pkgs//:which",
    ],
)

rust_binary(
    name = "minato",
    srcs = ["src/bin/minato.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":library",
        "@minato_pkgs//:color-eyre",
        "@minato_pkgs//:eyre",
        "@minato_pkgs//:facet",
        "@minato_pkgs//:facet-json",
        "@minato_pkgs//:figue",
        "@minato_pkgs//:tokio",
        "@minato_pkgs//:tracing",
        "@minato_pkgs//:tracing-subscriber",
    ],
)
